wm: Remove black bar see in tablet mode when entered with minimized window.

Steps to reproduce in bug. Caused because the calculation is correct,
but no relayout when minimized window gets reactivated. This cl will
relayout the non client view which will layout the client view with the
correct bounds.

Also replaced some duplicate code in the test file with an already
made function.

Test: CustomFrameViewAshTest.*
Bug: 802920
Change-Id: I0ca99fb837a5ddb0d6b78d2c22d1fb00e7b62230
Reviewed-on: https://chromium-review.googlesource.com/872095
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530349}
Former-commit-id: 8a8bc0bc5a8fb97023d4a3469786f9c62f147fdb